test: migrate to JUnit 5 (#68)