@@ -1,5 +1,10 @@
 package org.qubership.cloud.encryption.key;
 
+import org.hamcrest.Matchers;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 import org.qubership.cloud.encryption.config.ConfigurationParser;
 import org.qubership.cloud.encryption.config.keystore.KeystoreSubsystemConfig;
 import org.qubership.cloud.encryption.config.keystore.type.LocalKeystoreConfig;
@@ -8,59 +13,51 @@ import org.qubership.cloud.encryption.config.xml.DefaultConfigurationCryptoProvi
 import org.qubership.cloud.encryption.config.xml.XmlConfigurationSerializer;
 import org.qubership.cloud.encryption.config.xml.pojo.keystore.RemoteKeystoreXmlConf;
 import org.qubership.cloud.encryption.key.exception.IllegalKeystoreConfigurationException;
-import org.hamcrest.Matchers;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
 
 import javax.annotation.Nonnull;
 import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
-import java.io.File;
 import java.io.FileOutputStream;
+import java.nio.file.Path;
 import java.util.Arrays;
+import java.util.List;
 
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
-@SuppressWarnings({ "unchecked", "unused" })
-public class KeyStoreRepositoryImplTest {
+@SuppressWarnings({"unchecked", "unused"})
+class KeyStoreRepositoryImplTest {
     private ConfigurationParser parser;
-    private TemporaryFolder tmp;
 
-    @Before
-    public void setUp() throws Exception {
+    @TempDir
+    private Path tmp;
+
+    @BeforeEach
+    void setUp() throws Exception {
         SecretKey secretKey = KeyGenerator.getInstance("AES").generateKey();
         parser = new XmlConfigurationSerializer(new DefaultConfigurationCryptoProvider(secretKey));
-
-        tmp = new TemporaryFolder();
-        tmp.create();
-    }
-
-    @After
-    public void tearDown() throws Exception {
-        tmp.delete();
-        tmp = null;
     }
 
     @Test
-    public void testEmptyConfigurationParseCorrectly() throws Exception {
+    void testEmptyConfigurationParseCorrectly() {
         KeystoreSubsystemConfig config = new ConfigurationBuildersFactory().getKeystoreConfigBuilder().build();
 
         KeyStoreRepository result = new KeyStoreRepositoryImpl(config);
         assertThat("Configuration without keystores it's OK configuration", result, Matchers.notNullValue());
     }
 
-    @Test(expected = NullPointerException.class)
-    public void testNullLikeConfigurationCanNotBeSpecify() throws Exception {
-        KeyStoreRepository result = new KeyStoreRepositoryImpl(null);
-        fail("It restrict contract");
+    @Test
+    void testNullLikeConfigurationCanNotBeSpecify() {
+        assertThrows(
+                NullPointerException.class,
+                () -> new KeyStoreRepositoryImpl(null),
+                "It restrict contract"
+        );
     }
 
     @Test
-    public void testDefaultKeyStoreNotExistsInEmptyConfigureKeystoreRepository() throws Exception {
+    void testDefaultKeyStoreNotExistsInEmptyConfigureKeystoreRepository() {
         KeystoreSubsystemConfig config = new ConfigurationBuildersFactory().getKeystoreConfigBuilder().build();
 
         KeyStoreRepository result = new KeyStoreRepositoryImpl(config);
@@ -70,7 +67,7 @@ public class KeyStoreRepositoryImplTest {
     }
 
     @Test
-    public void testDefaultKeystoreDefinesCorrectInCaseWhenManyKeystoresConfigure() throws Exception {
+    void testDefaultKeystoreDefinesCorrectInCaseWhenManyKeystoresConfigure() throws Exception {
         final String defaultKSIdentity = "ks-def";
 
         final LocalKeystoreConfig firstConfig = generateLocalKeystoreConfig(defaultKSIdentity);
@@ -92,7 +89,7 @@ public class KeyStoreRepositoryImplTest {
     }
 
     @Test
-    public void testGetKeyStoreByTheyIdentity() throws Exception {
+    void testGetKeyStoreByTheyIdentity() throws Exception {
         final String defaultKSIdentity = "ks-def";
 
         final LocalKeystoreConfig firstConfig = generateLocalKeystoreConfig(defaultKSIdentity);
@@ -108,38 +105,44 @@ public class KeyStoreRepositoryImplTest {
 
         KeyStore findKeystore = repository.getKeyStoreByIdentity("ks-2");
 
+        Assertions.assertNotNull(findKeystore);
         assertThat(
                 "In configuration was describe 3 keystores and each have unique name, so, we should can lockup it by it unique name",
                 findKeystore.getIdentity(), equalTo("ks-2"));
     }
 
-    @Test(expected = UnsupportedOperationException.class)
-    public void testParseRemoveKeyStore() throws Exception {
+    @Test
+    void testParseRemoveKeyStore() {
         KeystoreSubsystemConfig config = new ConfigurationBuildersFactory().getKeystoreConfigBuilder()
-                .setKeyStores(Arrays.asList(new RemoteKeystoreXmlConf())).build();
+                .setKeyStores(List.of(new RemoteKeystoreXmlConf())).build();
 
-        KeyStoreRepository repository = new KeyStoreRepositoryImpl(config);
-        fail("Remote keystore not implemented yet");
+        assertThrows(
+                UnsupportedOperationException.class,
+                () -> new KeyStoreRepositoryImpl(config),
+                "Remote keystore not implemented yet"
+        );
     }
 
-    @Test(expected = IllegalKeystoreConfigurationException.class)
-    public void testParseNotCorrectFilledKeystoreLeadToFailAllKeystores() throws Exception {
+    @Test
+    void testParseNotCorrectFilledKeystoreLeadToFailAllKeystores() {
         LocalKeystoreConfig notValidConfig = new ConfigurationBuildersFactory().getLocalKeystoreConfigBuilder("ks2")
                 .setPassword("123").setKeystoreType("notExistsType").setLocation("/dev/null").build();
 
         KeystoreSubsystemConfig config = new ConfigurationBuildersFactory().getKeystoreConfigBuilder()
-                .setKeyStores(Arrays.asList(notValidConfig)).build();
+                .setKeyStores(List.of(notValidConfig)).build();
 
-        KeyStoreRepository repository = new KeyStoreRepositoryImpl(config);
-
-        fail("When one ofe keystore have not correct parameters should fail configure all another keystores, "
-                + "because if we ignore it exception, it lead to proble in runtime that will be detected after a while");
+        assertThrows(
+                IllegalKeystoreConfigurationException.class,
+                () -> new KeyStoreRepositoryImpl(config),
+                "When one ofe keystore have not correct parameters should fail configure all another keystores, "
+                        + "because if we ignore it exception, it lead to proble in runtime that will be detected after a while"
+        );
     }
 
     private LocalKeystoreConfig generateLocalKeystoreConfig(@Nonnull String identity) throws Exception {
         final String keystoreType = "JCEKS";
         final String ksPass = "someKsPassword";
-        final String location = tmp.newFile("test" + System.nanoTime() + ".ks").getAbsolutePath();
+        final String location = tmp.resolve("test" + System.nanoTime() + ".ks").toAbsolutePath().toString();
 
         final String keyAlias = "mySecretKey";
 
@@ -151,7 +154,7 @@ public class KeyStoreRepositoryImplTest {
         keyStore.setEntry(keyAlias, new java.security.KeyStore.SecretKeyEntry(secretKey),
                 new java.security.KeyStore.PasswordProtection(new char[0]));
 
-        try (FileOutputStream out = new FileOutputStream(new File(location))) {
+        try (FileOutputStream out = new FileOutputStream(location)) {
             keyStore.store(out, ksPass.toCharArray());
         }
 
